Port for B2_WLJ

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3177,6 +3177,12 @@ config PROJECT_NAME
         help
           Support for Project Name
 
+config MACH_B2_WLJ
+        depends on ARCH_MSM8974
+        bool "MSM8974 B2_WLJ"
+        help
+          Support for HTC MSM8974 B2_WLJ
+
 endif
 
 config PERFLOCK
